--- a/argo-cd-apps/base/argo-cd/argo-cd.yaml
+++ b/argo-cd-apps/base/argo-cd/argo-cd.yaml
@@ -9,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: components/argocd/production
-    repoURL: https://github.com/opencollaboration/infra.git
+    repoURL: git@github.com:opencollaboration/infra.git
     targetRevision: main
   syncPolicy:
     automated:
