Fix RBAC policy

--- a/components/argocd/base/argocd.yaml
+++ b/components/argocd/base/argocd.yaml
@@ -44,7 +44,8 @@ spec:
   rbac:
     defaultPolicy: ''
     policy: |
-      g, role:admin
+      g, ziax-admin, role:admin
+      g, opencollab-admin, role:admin
     scopes: '[groups]'
   extraConfig:
     application.resourceTrackingMethod: annotation+label
