--- a/components/argocd/base/argocd.yaml
+++ b/components/argocd/base/argocd.yaml
@@ -13,13 +13,7 @@ spec:
     ingress:
       enabled: false
     route:
-      annotations:
-        cert-manager.io/issuer-name: opencollab
-      enabled: true
-      tls:
-        insecureEdgeTerminationPolicy: Redirect
-        termination: reencrypt
-      wildcardPolicy: None
+      enabled: false
     service:
       type: ''
   grafana:
