Add GeyserMC project and service account

--- a/argo-cd-apps/production/kustomization.yaml
+++ b/argo-cd-apps/production/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: opencollab
 
 resources:
-  - ../base/project
-  - ../base/argo-cd
+  - ../base/argo-cd/
+  - ../base/opencollab
+  - ../base/geysermc
   - ../base/downloads
