Fix role binding

--- a/argo-cd-apps/base/geysermc/project.yaml
+++ b/argo-cd-apps/base/geysermc/project.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: geysermc
+  namespace: opencollab
 spec:
   destinationServiceAccounts:
     - defaultServiceAccount: geysermc
