--- a/argo-cd-apps/base/geysermc/role-binding.yaml
+++ b/argo-cd-apps/base/geysermc/role-binding.yaml
@@ -1,11 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: geysermc
+  name: opencollab-access
+  namespace: geysermc
 subjects:
   - kind: ServiceAccount
     name: geysermc
-    namespace: geysermc
+    namespace: opencollab
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
