--- a/argo-cd-apps/base/opencollab/project.yaml
+++ b/argo-cd-apps/base/opencollab/project.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: opencollab
+  namespace: opencollab
 spec:
   destinations:
     - namespace: opencollab
