This ArgoCD instance is not cluster scoped

--- a/components/argocd/base/argocd.yaml
+++ b/components/argocd/base/argocd.yaml
@@ -16,6 +16,7 @@ spec:
       enabled: false
     service:
       type: ''
+  defaultClusterScopedRoleDisabled: true
   sourceNamespaces:
     - opencollab
     - geysermc
