--- a/argo-cd-apps/apps-of-apps/base/all-applications.yaml
+++ b/argo-cd-apps/apps-of-apps/base/all-applications.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: all-opencollab-applications
+  namespace: opencollab
 spec:
   project: default
   source:
