--- a/argo-cd-apps/base/geysermc/project.yaml
+++ b/argo-cd-apps/base/geysermc/project.yaml
@@ -6,6 +6,7 @@ spec:
   destinationServiceAccounts:
     - defaultServiceAccount: geysermc
       server: https://kubernetes.default.svc
+      namespace: geysermc
   destinations:
     - namespace: geysermc
       server: https://kubernetes.default.svc
