Add geyser application

--- a/components/argocd/base/argocd.yaml
+++ b/components/argocd/base/argocd.yaml
@@ -3,6 +3,9 @@ kind: ArgoCD
 metadata:
   name: gitops
 spec:
+  sourceNamespaces:
+    - 'opencollab'
+    - 'geysermc'
   server:
     host: gitops.opencollab.dev
     autoscale:
