--- a/argo-cd-apps/base/geysermc/kustomization.yaml
+++ b/argo-cd-apps/base/geysermc/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - app-project.yaml
   - project.yaml
-#  - application.yaml
+  - application.yaml
